objects/TierAssessmentRule__c.object
<CustomObject>
    <fields>
        <fullName>BrandingPercentage__c</fullName>
        <label>Branding Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LoyaltyTierName__c</fullName>
        <label>Loyalty Tier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnershipYears__c</fullName>
        <label>Partnership Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuarterlyConferenceAttended__c</fullName>
        <label>Quarterly Conference Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesAcrossAllChannel__c</fullName>
        <label>Sales Across All Channel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TeamTrainedPercentage__c</fullName>
        <label>Team Trained Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Tier Assessment Rule</label>
    <listViews>
        <fullName>All_Tier_Assessment_Rules</fullName>
        <columns>NAME</columns>
        <columns>BrandingPercentage__c</columns>
        <columns>PartnershipYears__c</columns>
        <columns>QuarterlyConferenceAttended__c</columns>
        <columns>SalesAcrossAllChannel__c</columns>
        <columns>TeamTrainedPercentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tier Assessment Rules</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tier Assessment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>